changes in styling

--- a/WebApp/Views/Shared/Sections/Account/_Account-security.cshtml
+++ b/WebApp/Views/Shared/Sections/Account/_Account-security.cshtml
@@ -25,7 +25,23 @@
 		<div class="account-security">
 			<h1 class="h2">@Model.Title</h1>
 			<form class="security" method="post" asp-controller="Account" asp-action="Security" novalidate>
-				<h3 class="h5">@Model.AccountSecurity.Title</h3>
+				<h3 class="h5">@Model.AccountSecurity.Title</h3>			
+				@if (!string.IsNullOrEmpty(TempData["PasswordError"]?.ToString()))
+
+				{
+					<div class="alert">
+						@TempData["PasswordError"]
+					</div>
+
+				}
+
+				@if (!string.IsNullOrEmpty(TempData["PasswordSuccess"]?.ToString()))
+
+				{
+					<div class="success">
+						@TempData["PasswordSuccess"]
+					</div>
+				}
 				<div class="security-content">
 					<div id="current-password" class="security-group">
 						<label asp-for=AccountSecurity.CurrentPassword></label>
@@ -58,6 +74,12 @@
 						<span class="checkbox-error" asp-validation-for="AccountDelete.DeleteAccount"></span>
 						<span asp-for=@Model.AccountDelete.DeleteAccount></span>
 					</div>
+					@if (!string.IsNullOrEmpty(TempData["ErrorMessage"]?.ToString()))
+					{
+						<div class="alert">
+							@TempData["ErrorMessage"]
+						</div>
+					}
 					<div class="delete-button">
 						<button class="btn-theme" type="submit">Delete</button>
 					</div>
@@ -67,4 +89,4 @@
 	</div>
 </section>
 
-@await Html.PartialAsync("~/Views/Shared/_validationScriptPartial.cshtml")
+@await Html.PartialAsync("~/Views/Shared/_validationScriptPartial.cshtml")
