--- a/WebApp/Views/Shared/_headerPartial.cshtml
+++ b/WebApp/Views/Shared/_headerPartial.cshtml
@@ -1,101 +1,104 @@
 ﻿@inject SignInManager<UserEntity> _signInManager
 
 <header class="@((ViewContext.RouteData.Values["Action"]!.ToString() == "Contact") ? "contact" : "standard")">
-    <div class="container">
-        <a href="/" id="logo">
-            <img src="~/images/silicon-logo.svg" alt="Silicon">
-        </a>
+	<div class="container">
+		<a href="/" id="logo">
+			<img src="~/images/silicon-logo.svg" alt="Silicon">
+		</a>
 
-        <div id="menu">
-            <nav>
-                @if (_signInManager.IsSignedIn(User))
-                {
-                    <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                    <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-                    <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                }
-                else
-                {
-                    <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                    <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
-                    <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                }
+		<div id="menu">
+			<nav>
+				@if (_signInManager.IsSignedIn(User))
+				{
+					<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+					<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
+					<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+				}
+				else
+				{
+					<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+					<a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
+					<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+				}
 
-            </nav>
-        </div>
+			</nav>
+		</div>
 
 
-        <div class="btn-switch">
-            <span>Light</span>
-            <div class="switch">
-                <input type="checkbox" id="switch">
-                <label for="switch" class="slider round"></label>
-            </div>
-            <span>Dark</span>
-        </div>
+		<div class="btn-switch">
+			<span>Light</span>
+			<div class="switch">
+				<input type="checkbox" id="switch">
+				<label for="switch" class="slider round"></label>
+			</div>
+			<span>Dark</span>
+		</div>
 
-        <div class="account-buttons">
+		<div class="account-buttons">
 
-            @if (_signInManager.IsSignedIn(User))
-            {
-               
-                <div class="profile-avatar">
-				    <a asp-controller="Account" asp-action="Index">
-                        <img src="~/images/SmallProfileAvatar.svg" alt="User Image" />
-                    </a>    
-                </div>
+			@if (_signInManager.IsSignedIn(User))
+			{
+				<div class="profile-avatar">
+					<div class="dropdown">
+						<button onclick="toggleDropdown()" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+							<img src="~/images/SmallProfileAvatar.svg" alt="User Image" />
+						</button>
+						<div id="profileDropdownMenu" class="dropdown-menu" style="display: none;">
+							<a asp-controller="Account" asp-action="Index" class="dropdown-item btn-theme"><i class="fa-regular fa-gear"></i>Details</a>
+							<a asp-controller="Account" asp-action="Security" class="dropdown-item btn-theme"><i class="fa-regular fa-lock"></i>Security</a>
+							<a asp-controller="Account" asp-action="SavedItems" class="dropdown-item btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item btn-theme" asp-controller="Account" asp-action="LogOut"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
+						</div>
+					</div>
+				</div>
+			}
+			else
+			{
+				<a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
+				<a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
+			}
+		</div>
+	</div>
 
-            }
-            else
-            {
-                <a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
-                <a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
-            }
-        </div>
+	<div class="mobile-account-buttons">
 
-        <div class="btn-mobile">
-            <button class="btn" id="mobile-menu-btn" aria-controls="btn-switch"><i class="fa-solid fa-bars"></i></button>
-        </div>
-    </div>
-
-    <div id="mobile-menu" class="open" aria-expanded="false">
-
-        <div class="btn-switch">
-            <span>Light</span>
-            <div class="switch">
-                <input type="checkbox" id="switch" role="switch" />
-                <label for="switch" class="slider round"></label>
-            </div>
-            <span>Dark</span>
-        </div>
-
-        <div class="account-buttons">
-
-            @if (_signInManager.IsSignedIn(User))
-            {
-                <a asp-controller="Account" asp-action="LogOut" class="btn-theme"><i class="fa-regular fa-arrow-right-from-bracket"></i>Log Out</a>
-            }
-            else
-            {
-                <a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
-                <a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
-            }
-
-            <nav>
-                @if (_signInManager.IsSignedIn(User))
-                {
-                    <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                    <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-                    <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                }
-                else
-                {
-                    <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                    <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
-                    <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                }
-            </nav>
-
-        </div>
-    </div>
+		@if (_signInManager.IsSignedIn(User))
+		{
+			<div class="profile-avatar-mobile">
+				<div class="dropdown-mobile">
+					<button onclick="toggleDropdownMobile()" class="dropdown-toggle-mobile" aria-haspopup="true" aria-expanded="false">
+						<img src="~/images/SmallProfileAvatar.svg" alt="User Image" />
+					</button>
+					<div id="profileDropdownMenuMobile" class="dropdown-menu-mobile" style="display: none;">
+						<a asp-controller="Account" asp-action="Index" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-gear"></i>Details</a>
+						<a asp-controller="Account" asp-action="Security" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-lock"></i>Security</a>
+						<a asp-controller="Account" asp-action="SavedItems" class="dropdown-item-mobile btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
+						<div class="dropdown-divider-mobile"></div>
+						<a class="dropdown-item-mobile btn-theme" asp-controller="Account" asp-action="LogOut"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
+					</div>
+					<nav>
+						<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+						<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
+						<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+					</nav>
+				</div>
+			</div>
+		}
+		else
+		{
+			<button onclick="toggleDropdownMobile()" class="dropdown-toggle-mobile" aria-haspopup="true" aria-expanded="false">
+				<i class="fa-solid fa-bars"></i>
+			</button>
+			<a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
+			<a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
+			<nav>
+				<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+				<a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
+				<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+			</nav>
+		}
+	</div>
 </header>
+
+@await Html.PartialAsync("~/Views/Shared/_profileAvatarPartial.cshtml")
