--- a/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
@@ -21,6 +21,7 @@
                 height: 90vh;
                 border-right: 1px solid rgb(147, 151, 173, 0.3);
                 margin-right: 10rem;
+                border-bottom: none;
             }
 
 
