--- a/WebApp/Views/Shared/_headerPartial.cshtml
+++ b/WebApp/Views/Shared/_headerPartial.cshtml
@@ -28,7 +28,7 @@
 		<div class="btn-switch">
 			<span>Light</span>
 			<div class="switch">
-				<input type="checkbox" id="switch">
+				<input type="checkbox" id="switch" onclick="toggleBothSwitches();">
 				<label for="switch" class="slider round"></label>
 			</div>
 			<span>Dark</span>
@@ -76,12 +76,29 @@
 						<a asp-controller="Account" asp-action="SavedItems" class="dropdown-item-mobile btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
 						<div class="dropdown-divider-mobile"></div>
 						<a class="dropdown-item-mobile btn-theme" asp-controller="Account" asp-action="LogOut"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
+						
+						<nav class="nav-links-mobile">
+							<div class="menu-links">
+								<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+							</div>
+							<div class="menu-links">
+								<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
+							</div>
+							<div class="menu-links">
+								<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+							</div>
+						</nav>
+
+						<div class="btn-switch-mobile">
+							<span>Light</span>
+							<div class="switch">
+								<input type="checkbox" id="switch-mobile" onclick="toggleBothSwitches();">
+								<label for="switch-mobile" class="slider round"></label>
+							</div>
+							<span>Dark</span>
+						</div>
+						<div class="end-line"></div>
 					</div>
-					<nav>
-						<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-						<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-						<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-					</nav>
 				</div>
 			</div>
 		}
@@ -92,13 +109,30 @@
 			</button>
 			<a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
 			<a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
-			<nav>
-				<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-				<a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
-				<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+
+			<nav class="nav-links-mobile">
+				<div class="menu-links">
+					<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+				</div>
+				<div class="menu-links">
+					<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
+				</div>
+				<div class="menu-links">
+					<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+				</div>
 			</nav>
+
+			<div class="btn-switch">
+				<span>Light</span>
+				<div class="switch">
+					<input type="checkbox" name="toggle "id="switch">
+					<label for="switch" class="slider round"></label>
+				</div>
+				<span>Dark</span>
+			</div>
 		}
 	</div>
 </header>
 
 @await Html.PartialAsync("~/Views/Shared/_profileAvatarPartial.cshtml")
+@await Html.PartialAsync("~/Views/Shared/_lightAndDarkMode.cshtml")
