--- a/WebApp/wwwroot/css/scss/components/_buttons.scss
+++ b/WebApp/wwwroot/css/scss/components/_buttons.scss
@@ -118,6 +118,72 @@
     }
 }
 
+.btn-switch-mobile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    label {
+        @include text-nav;
+    }
+
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 46px;
+        height: 25px;
+
+        & input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+
+            &:checked + .slider {
+                background-color: $theme;
+            }
+
+            &:focus + .slider {
+                box-shadow: 0 0 1px $theme;
+            }
+
+            &:checked + .slider:before {
+                transform: translateX(20px);
+                background-color: $white;
+            }
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: $gray-700;
+            transition: .4s;
+
+            &:before {
+                position: absolute;
+                content: "";
+                height: 20px;
+                width: 20px;
+                left: 3px;
+                bottom: 2.7px;
+                background-color: $white;
+                transition: .4s;
+            }
+
+            &.round {
+                border-radius: 34px;
+            }
+
+            &.round:before {
+                border-radius: 50%;
+            }
+        }
+    }
+}
+
 .btn-social {
     @include text-xl;
     display: flex;
