Light and dark mode added

--- a/WebApp/Views/Shared/Sections/Home/_Not-found-404.cshtml
+++ b/WebApp/Views/Shared/Sections/Home/_Not-found-404.cshtml
@@ -6,9 +6,9 @@
 
 <section id="not-found">
     <div class="container">
-        <div class="notfound-image">
-            <img class="not-found-img" src="~/images/404.svg" />
-        </div>
+        <a href="/" id="notFoundId" class="notfound-image">
+            
+        </a>
         <div class="not-found-content">
             <h1 class="h1">@Model.NotFound.Title</h1>
             <p class="gray-700">@Model.NotFound.Description</p>
