--- a/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
@@ -94,3 +94,106 @@
         }
     }
 }
+
+.dark-mode {
+    #saved-items {
+        padding-bottom: 2rem;
+        padding-top: 2rem;
+        background-color: $gray-900;
+
+        .container {
+            display: flex;
+            flex-direction: column;
+
+            @include xl {
+                display: flex;
+                flex-direction: row;
+            }
+
+            .account-nav {
+                padding-bottom: 2rem;
+                border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+
+                @include xl {
+                    width: 20%;
+                    height: 90vh;
+                    border-right: 1px solid rgb(147, 151, 173, 0.3);
+                    margin-right: 10rem;
+                    border-bottom: none;
+                }
+
+
+
+                .nav-image {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 1rem;
+                    padding-top: 3.5rem;
+
+                    img {
+                    }
+                }
+
+                .nav-name-info {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 1rem;
+
+                    h2 {
+                        margin: 0;
+                        color: $gray-300;
+                    }
+
+                    p {
+                        margin: 0;
+                        margin-bottom: 1.5rem;
+                        color: $gray-500;
+                    }
+                }
+
+                .nav-buttons {
+                    margin-right: 1rem;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    gap: .2rem;
+
+                    @include xl {
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+
+
+
+                    a {
+                        display: flex;
+                        justify-content: center;
+                        font-weight: 700;
+                        width: auto;
+
+
+                        @include xl {
+                            display: flex;
+                            font-weight: 700;
+                            justify-content: start;
+                        }
+                    }
+
+                    .btn-gray {
+                        background-color: $gray-900;
+                        color: $gray-300;
+
+
+                        &:hover {
+                            background-color: #6366F1;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
