--- a/WebApp/Views/Shared/_headerPartial.cshtml
+++ b/WebApp/Views/Shared/_headerPartial.cshtml
@@ -2,9 +2,8 @@
 
 <header class="@((ViewContext.RouteData.Values["Action"]!.ToString() == "Contact") ? "contact" : "standard")">
 	<div class="container">
-		<a href="/" id="logo">
-			<img src="~/images/silicon-logo.svg" alt="Silicon">
-		</a>
+		<a href="/" id="logo"></a>	
+		
 
 		<div id="menu">
 			<nav>
@@ -59,80 +58,88 @@
 				<a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
 			}
 		</div>
-	</div>
+		<div class="account-buttons-mobile">
 
-	<div class="mobile-account-buttons">
+			@if (_signInManager.IsSignedIn(User))
+			{
+				<div class="profile-avatar-mobile">
+					<div class="dropdown-mobile">
+						<button onclick="toggleDropdownMobile()" class="dropdown-toggle-mobile" aria-haspopup="true" aria-expanded="false">
+							<img src="~/images/SmallProfileAvatar.svg" alt="User Image" />
+						</button>
+						<div id="profileDropdownMenuMobile" class="dropdown-menu-mobile" style="display: none;">
+							<a asp-controller="Account" asp-action="Index" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-gear"></i>Details</a>
+							<a asp-controller="Account" asp-action="Security" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-lock"></i>Security</a>
+							<a asp-controller="Account" asp-action="SavedItems" class="dropdown-item-mobile btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
+							<div class="dropdown-divider-mobile"></div>
+							<a class="dropdown-item-mobile btn-theme" asp-controller="Account" asp-action="LogOut"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
 
-		@if (_signInManager.IsSignedIn(User))
-		{
-			<div class="profile-avatar-mobile">
-				<div class="dropdown-mobile">
-					<button onclick="toggleDropdownMobile()" class="dropdown-toggle-mobile" aria-haspopup="true" aria-expanded="false">
-						<img src="~/images/SmallProfileAvatar.svg" alt="User Image" />
-					</button>
-					<div id="profileDropdownMenuMobile" class="dropdown-menu-mobile" style="display: none;">
-						<a asp-controller="Account" asp-action="Index" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-gear"></i>Details</a>
-						<a asp-controller="Account" asp-action="Security" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-lock"></i>Security</a>
-						<a asp-controller="Account" asp-action="SavedItems" class="dropdown-item-mobile btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
-						<div class="dropdown-divider-mobile"></div>
-						<a class="dropdown-item-mobile btn-theme" asp-controller="Account" asp-action="LogOut"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
-						
-						<nav class="nav-links-mobile">
-							<div class="menu-links">
-								<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-							</div>
-							<div class="menu-links">
-								<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-							</div>
-							<div class="menu-links">
-								<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-							</div>
-						</nav>
+							<nav class="nav-links-mobile">
+								<div class="menu-links">
+									<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+								</div>
+								<div class="menu-links">
+									<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
+								</div>
+								<div class="menu-links">
+									<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+								</div>
+							</nav>
 
-						<div class="btn-switch-mobile">
-							<span>Light</span>
-							<div class="switch">
-								<input type="checkbox" id="switch-mobile" onclick="toggleBothSwitches();">
-								<label for="switch-mobile" class="slider round"></label>
+							<div class="btn-switch-mobile">
+								<span>Light</span>
+								<div class="switch">
+									<input type="checkbox" id="switch-mobile" onclick="toggleBothSwitches();">
+									<label for="switch-mobile" class="slider round"></label>
+								</div>
+								<span>Dark</span>
 							</div>
-							<span>Dark</span>
+							<div class="end-line"></div>
 						</div>
-						<div class="end-line"></div>
 					</div>
 				</div>
-			</div>
-		}
-		else
-		{
-			<button onclick="toggleDropdownMobile()" class="dropdown-toggle-mobile" aria-haspopup="true" aria-expanded="false">
-				<i class="fa-solid fa-bars"></i>
-			</button>
-			<a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
-			<a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
+			}
+			else
+			{
+				<div class="profile-avatar-mobile">
+					<div class="dropdown-mobile">
+						<button onclick="toggleDropdownMobile()" class="dropdown-toggle-mobile" aria-haspopup="true" aria-expanded="false">
+							<i class="fa-solid fa-bars"></i>
+						</button>
+						<div id="profileDropdownMenuMobile" class="dropdown-menu-mobile" style="display: none;">
+							<a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
+							<a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
 
-			<nav class="nav-links-mobile">
-				<div class="menu-links">
-					<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-				</div>
-				<div class="menu-links">
-					<a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-				</div>
-				<div class="menu-links">
-					<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-				</div>
-			</nav>
+							<nav class="nav-links-mobile">
+								<div class="menu-links">
+									<a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+								</div>
+								<div class="menu-links">
+									<a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
+								</div>
+								<div class="menu-links">
+									<a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
+								</div>
+							</nav>
 
-			<div class="btn-switch">
-				<span>Light</span>
-				<div class="switch">
-					<input type="checkbox" name="toggle "id="switch">
-					<label for="switch" class="slider round"></label>
+							<div class="btn-switch-mobile">
+								<span>Light</span>
+								<div class="switch">
+									<input type="checkbox" id="switch-mobile" onclick="toggleBothSwitches();">
+									<label for="switch-mobile" class="slider round"></label>
+								</div>
+								<span>Dark</span>
+							</div>
+							<div class="end-line"></div>
+						</div>
+					</div>
 				</div>
-				<span>Dark</span>
-			</div>
-		}
+			}
+		</div>
 	</div>
 </header>
 
 @await Html.PartialAsync("~/Views/Shared/_profileAvatarPartial.cshtml")
-@await Html.PartialAsync("~/Views/Shared/_lightAndDarkMode.cshtml")
+
+
+
