--- a/WebApp/wwwroot/css/scss/sections/_account-details.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-details.scss
@@ -277,3 +277,881 @@
 		}
 	}
 }
+
+.dark-mode {
+	#account {
+		padding-bottom: 2rem;
+		padding-top: 2rem;
+
+
+		.container {
+			display: flex;
+			flex-direction: column;
+
+			@include xl {
+				display: flex;
+				flex-direction: row;
+			}
+
+			.account-nav {
+				padding-bottom: 2rem;
+				border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+
+				@include xl {
+					width: 20%;
+					height: 90vh;
+					border-right: 1px solid rgb(147, 151, 173, 0.3);
+					margin-right: 10rem;
+					border-bottom: none;
+				}
+
+
+
+				.nav-image {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					margin-right: 1rem;
+					padding-top: 3.5rem;
+
+					img {
+					}
+				}
+
+				.nav-name-info {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					margin-right: 1rem;
+
+					h2 {
+						margin: 0;
+					}
+
+					p {
+						margin: 0;
+						margin-bottom: 1.5rem;
+					}
+				}
+
+				.nav-buttons {
+					margin-right: 1rem;
+					display: grid;
+					grid-template-columns: 1fr 1fr;
+					gap: .2rem;
+
+					@include xl {
+						display: flex;
+						flex-direction: column;
+					}
+
+
+
+
+					a {
+						display: flex;
+						justify-content: center;
+						font-weight: 700;
+						width: auto;
+
+
+						@include xl {
+							display: flex;
+							font-weight: 700;
+							justify-content: start;
+						}
+					}
+
+					.btn-gray {
+						background-color: white;
+
+
+						&:hover {
+							background-color: #6366F1;
+						}
+					}
+				}
+			}
+
+			.account-details {
+				display: flex;
+				flex-direction: column;
+
+
+				@include xl {
+					width: 50%;
+				}
+
+				h1 {
+				}
+
+				.basic {
+
+					h3 {
+						color: #6366F1;
+					}
+
+					.basic-content {
+						justify-content: center;
+						display: grid;
+						grid-template-columns: 1fr 1fr;
+						grid-template-areas:
+							"first last" "email email" "phone phone" "bio bio";
+						gap: .5rem;
+
+						@include xl {
+							grid-template-areas:
+								"first last" "email phone" "bio bio";
+						}
+
+
+						.basic-group {
+							position: relative;
+							display: flex;
+							flex-direction: column;
+							color: $gray-900;
+							font-weight: 700;
+
+							.opt {
+								display: flex;
+								gap: .2rem;
+
+								p {
+									margin: 0;
+									color: $gray-600;
+									font-weight: 400;
+								}
+							}
+
+
+
+							span {
+
+								&.field-validation-error {
+									color: $danger;
+									font-weight: 500;
+									opacity: 0.7;
+									position: absolute;
+									top: 0;
+									right: 0;
+								}
+							}
+
+							input {
+								border: 1px solid $gray-400;
+								padding: .4rem;
+								border-radius: 5px;
+
+								&.input-validation-error {
+									border-color: $danger;
+								}
+							}
+
+							.input-bio {
+								padding-bottom: 3rem;
+								margin-bottom: 1rem;
+								border: 1px solid $gray-400;
+								border-radius: 5px;
+								padding: .4rem;
+							}
+						}
+
+						#basic-firstname {
+							grid-area: first;
+						}
+
+						#basic-lastname {
+							grid-area: last;
+						}
+
+						#basic-email {
+							grid-area: email;
+						}
+
+						#basic-phone {
+							grid-area: phone;
+						}
+
+						#basic-bio {
+							grid-area: bio;
+						}
+					}
+
+					.basic-buttons {
+						display: flex;
+						gap: 1rem;
+						padding-bottom: 2rem;
+						border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+						.btn-gray {
+						}
+					}
+				}
+
+
+
+				.address {
+					padding-top: 2rem;
+
+					h4 {
+						color: #6366F1;
+					}
+
+					.address-content {
+						justify-content: center;
+						display: grid;
+						grid-template-columns: 1fr 1fr;
+						grid-template-areas:
+							"first first" "second second" "postalcode city";
+						gap: .5rem;
+
+						.address-group {
+							position: relative;
+							display: flex;
+							flex-direction: column;
+							color: $gray-900;
+							font-weight: 700;
+
+							span {
+
+								&.field-validation-error {
+									color: $danger;
+									font-weight: 500;
+									opacity: 0.7;
+									position: absolute;
+									top: 0;
+									right: 0;
+								}
+							}
+
+							input {
+								border: 1px solid $gray-400;
+								padding: .4rem;
+								border-radius: 5px;
+							}
+						}
+
+						#address-line1 {
+							grid-area: first;
+						}
+
+						#address-line2 {
+							grid-area: second;
+						}
+
+						#address-postalcode {
+							grid-area: postalcode;
+						}
+
+						#address-city {
+							grid-area: city;
+						}
+					}
+
+					.address-buttons {
+						display: flex;
+						gap: 1rem;
+						padding-top: 1rem;
+					}
+				}
+			}
+		}
+	}
+}
+
+.dark-mode {
+	#account {
+		padding-bottom: 2rem;
+		padding-top: 2rem;
+
+		.container {
+			display: flex;
+			flex-direction: column;
+
+			@include xl {
+				display: flex;
+				flex-direction: row;
+			}
+
+			.account-nav {
+				padding-bottom: 2rem;
+				border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+
+				@include xl {
+					width: 20%;
+					height: 90vh;
+					border-right: 1px solid rgb(147, 151, 173, 0.3);
+					margin-right: 10rem;
+					border-bottom: none;
+				}
+
+
+
+				.nav-image {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					margin-right: 1rem;
+					padding-top: 3.5rem;
+
+					img {
+					}
+				}
+
+				.nav-name-info {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					margin-right: 1rem;
+
+					h2 {
+						margin: 0;
+					}
+
+					p {
+						margin: 0;
+						margin-bottom: 1.5rem;
+					}
+				}
+
+				.nav-buttons {
+					margin-right: 1rem;
+					display: grid;
+					grid-template-columns: 1fr 1fr;
+					gap: .2rem;
+
+					@include xl {
+						display: flex;
+						flex-direction: column;
+					}
+
+
+
+
+					a {
+						display: flex;
+						justify-content: center;
+						font-weight: 700;
+						width: auto;
+
+
+						@include xl {
+							display: flex;
+							font-weight: 700;
+							justify-content: start;
+						}
+					}
+
+					.btn-gray {
+						background-color: white;
+
+
+						&:hover {
+							background-color: #6366F1;
+						}
+					}
+				}
+			}
+
+			.account-details {
+				display: flex;
+				flex-direction: column;
+
+
+				@include xl {
+					width: 50%;
+				}
+
+				h1 {
+				}
+
+				.basic {
+
+					h3 {
+						color: #6366F1;
+					}
+
+					.basic-content {
+						justify-content: center;
+						display: grid;
+						grid-template-columns: 1fr 1fr;
+						grid-template-areas:
+							"first last" "email email" "phone phone" "bio bio";
+						gap: .5rem;
+
+						@include xl {
+							grid-template-areas:
+								"first last" "email phone" "bio bio";
+						}
+
+
+						.basic-group {
+							position: relative;
+							display: flex;
+							flex-direction: column;
+							color: $gray-900;
+							font-weight: 700;
+
+							.opt {
+								display: flex;
+								gap: .2rem;
+
+								p {
+									margin: 0;
+									color: $gray-600;
+									font-weight: 400;
+								}
+							}
+
+
+
+							span {
+
+								&.field-validation-error {
+									color: $danger;
+									font-weight: 500;
+									opacity: 0.7;
+									position: absolute;
+									top: 0;
+									right: 0;
+								}
+							}
+
+							input {
+								border: 1px solid $gray-400;
+								padding: .4rem;
+								border-radius: 5px;
+
+								&.input-validation-error {
+									border-color: $danger;
+								}
+							}
+
+							.input-bio {
+								padding-bottom: 3rem;
+								margin-bottom: 1rem;
+								border: 1px solid $gray-400;
+								border-radius: 5px;
+								padding: .4rem;
+							}
+						}
+
+						#basic-firstname {
+							grid-area: first;
+						}
+
+						#basic-lastname {
+							grid-area: last;
+						}
+
+						#basic-email {
+							grid-area: email;
+						}
+
+						#basic-phone {
+							grid-area: phone;
+						}
+
+						#basic-bio {
+							grid-area: bio;
+						}
+					}
+
+					.basic-buttons {
+						display: flex;
+						gap: 1rem;
+						padding-bottom: 2rem;
+						border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+						.btn-gray {
+						}
+					}
+				}
+
+
+
+				.address {
+					padding-top: 2rem;
+
+					h4 {
+						color: #6366F1;
+					}
+
+					.address-content {
+						justify-content: center;
+						display: grid;
+						grid-template-columns: 1fr 1fr;
+						grid-template-areas:
+							"first first" "second second" "postalcode city";
+						gap: .5rem;
+
+						.address-group {
+							position: relative;
+							display: flex;
+							flex-direction: column;
+							color: $gray-900;
+							font-weight: 700;
+
+							span {
+
+								&.field-validation-error {
+									color: $danger;
+									font-weight: 500;
+									opacity: 0.7;
+									position: absolute;
+									top: 0;
+									right: 0;
+								}
+							}
+
+							input {
+								border: 1px solid $gray-400;
+								padding: .4rem;
+								border-radius: 5px;
+							}
+						}
+
+						#address-line1 {
+							grid-area: first;
+						}
+
+						#address-line2 {
+							grid-area: second;
+						}
+
+						#address-postalcode {
+							grid-area: postalcode;
+						}
+
+						#address-city {
+							grid-area: city;
+						}
+					}
+
+					.address-buttons {
+						display: flex;
+						gap: 1rem;
+						padding-top: 1rem;
+					}
+				}
+			}
+		}
+	}
+}
+.dark-mode {
+	#account {
+		padding-bottom: 2rem;
+		padding-top: 2rem;
+		background-color: $gray-900;
+
+
+		.container {
+			display: flex;
+			flex-direction: column;
+
+			@include xl {
+				display: flex;
+				flex-direction: row;
+			}
+
+			.account-nav {
+				padding-bottom: 2rem;
+				border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+
+				@include xl {
+					width: 20%;
+					height: 90vh;
+					border-right: 1px solid rgb(147, 151, 173, 0.3);
+					margin-right: 10rem;
+					border-bottom: none;
+				}
+
+
+
+				.nav-image {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					margin-right: 1rem;
+					padding-top: 3.5rem;
+
+					img {
+					}
+				}
+
+				.nav-name-info {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					margin-right: 1rem;
+
+					h2 {
+						margin: 0;
+						color: $gray-300;
+					}
+
+					p {
+						margin: 0;
+						margin-bottom: 1.5rem;
+						color: $gray-500;
+					}
+				}
+
+				.nav-buttons {
+					margin-right: 1rem;
+					display: grid;
+					grid-template-columns: 1fr 1fr;
+					gap: .2rem;
+
+					@include xl {
+						display: flex;
+						flex-direction: column;
+					}
+
+
+
+
+					a {
+						display: flex;
+						justify-content: center;
+						font-weight: 700;
+						width: auto;
+						color: $gray-300;
+
+
+						@include xl {
+							display: flex;
+							font-weight: 700;
+							justify-content: start;
+						}
+					}
+
+					.btn-gray {
+						background-color: $gray-900;
+
+
+						&:hover {
+							background-color: #6366F1;
+						}
+					}
+				}
+			}
+
+			.account-details {
+				display: flex;
+				flex-direction: column;
+
+				@include xl {
+					width: 50%;
+				}
+
+				h1 {
+				}
+
+				label {
+					color: $gray-300;
+				}
+
+				input {
+					color: $gray-900;
+				}
+
+				.basic {
+
+					h3 {
+						color: #6366F1;
+					}
+
+					.basic-content {
+						justify-content: center;
+						display: grid;
+						grid-template-columns: 1fr 1fr;
+						grid-template-areas:
+							"first last" "email email" "phone phone" "bio bio";
+						gap: .5rem;
+
+
+						@include xl {
+							grid-template-areas:
+								"first last" "email phone" "bio bio";
+						}
+
+
+						.basic-group {
+							position: relative;
+							display: flex;
+							flex-direction: column;
+							color: $gray-300;
+							font-weight: 700;
+
+							.opt {
+								display: flex;
+								gap: .2rem;
+
+								p {
+									margin: 0;
+									color: $gray-500;
+									font-weight: 400;
+								}
+							}
+
+
+
+							span {
+
+
+								&.field-validation-error {
+									color: $danger;
+									font-weight: 500;
+									opacity: 0.7;
+									position: absolute;
+									top: 0;
+									right: 0;
+								}
+							}
+
+							input {
+								border: 1px solid $gray-400;
+								padding: .4rem;
+								border-radius: 5px;
+
+								&.input-validation-error {
+									border-color: $danger;
+								}
+							}
+
+							.input-bio {
+								padding-bottom: 3rem;
+								margin-bottom: 1rem;
+								border: 1px solid $gray-400;
+								border-radius: 5px;
+								padding: .4rem;
+							}
+						}
+
+						#basic-firstname {
+							grid-area: first;
+						}
+
+						#basic-lastname {
+							grid-area: last;
+						}
+
+						#basic-email {
+							grid-area: email;
+						}
+
+						#basic-phone {
+							grid-area: phone;
+						}
+
+						#basic-bio {
+							grid-area: bio;
+						}
+					}
+
+					.basic-buttons {
+						display: flex;
+						gap: 1rem;
+						padding-bottom: 2rem;
+						border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+						.btn-gray {
+							background-color: black;
+							color: $gray-300;
+
+							&:hover {
+								background-color: $theme;
+							}
+						}
+					}
+				}
+
+
+
+				.address {
+					padding-top: 2rem;
+
+					h4 {
+						color: #6366F1;
+					}
+
+					.address-content {
+						justify-content: center;
+						display: grid;
+						grid-template-columns: 1fr 1fr;
+						grid-template-areas:
+							"first first" "second second" "postalcode city";
+						gap: .5rem;
+
+						.address-group {
+							position: relative;
+							display: flex;
+							flex-direction: column;
+							color: $gray-300;
+							font-weight: 700;
+
+							span {
+
+								&.field-validation-error {
+									color: $danger;
+									font-weight: 500;
+									opacity: 0.7;
+									position: absolute;
+									top: 0;
+									right: 0;
+								}
+							}
+
+							input {
+								border: 1px solid $gray-400;
+								padding: .4rem;
+								border-radius: 5px;
+							}
+						}
+
+						#address-line1 {
+							grid-area: first;
+						}
+
+						#address-line2 {
+							grid-area: second;
+						}
+
+						#address-postalcode {
+							grid-area: postalcode;
+						}
+
+						#address-city {
+							grid-area: city;
+						}
+					}
+
+					.address-buttons {
+						display: flex;
+						gap: 1rem;
+						padding-top: 1rem;
+
+						.btn-gray {
+							background-color: black;
+							color: $gray-300;
+
+							&:hover {
+								background-color: $theme;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+
+
