--- a/WebApp/wwwroot/css/scss/sections/_account-security.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-security.scss
@@ -259,3 +259,280 @@
         }
     }
 }
+
+.dark-mode {
+    #security {
+        padding-bottom: 2rem;
+        padding-top: 2rem;
+        background-color: $gray-900;
+
+        .container {
+            display: flex;
+            flex-direction: column;
+
+            @include xl {
+                display: flex;
+                flex-direction: row;
+            }
+
+            .account-nav {
+                padding-bottom: 2rem;
+                border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+
+                @include xl {
+                    width: 20%;
+                    height: 90vh;
+                    border-right: 1px solid rgb(147, 151, 173, 0.3);
+                    margin-right: 10rem;
+                    border-bottom: none;
+                }
+
+
+
+                .nav-image {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 1rem;
+                    padding-top: 3.5rem;
+
+                    img {
+                    }
+                }
+
+                .nav-name-info {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 1rem;
+
+                    h2 {
+                        margin: 0;
+                        color: $gray-300;
+                    }
+
+                    p {
+                        margin: 0;
+                        margin-bottom: 1.5rem;
+                        color: $gray-500;
+                    }
+                }
+
+                .nav-buttons {
+                    margin-right: 1rem;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    gap: .2rem;
+
+                    @include xl {
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+
+
+
+                    a {
+                        display: flex;
+                        justify-content: center;
+                        font-weight: 700;
+                        width: auto;
+
+
+                        @include xl {
+                            display: flex;
+                            font-weight: 700;
+                            justify-content: start;
+                        }
+                    }
+
+                    .btn-gray {
+                        background-color: $gray-900;
+                        color: $gray-300;
+
+
+                        &:hover {
+                            background-color: #6366F1;
+                        }
+                    }
+                }
+            }
+
+            .account-security {
+                display: flex;
+                flex-direction: column;
+
+
+                @include xl {
+                    width: 60%;
+                }
+
+                h1 {
+                }
+
+                input {
+                }
+
+                label {
+                    color: $gray-300;
+                }
+
+                .security {
+
+                    h3 {
+                        color: #6366F1;
+                    }
+
+                    .alert {
+                        background-color: #ef444452;
+                        opacity: 0.8;
+                        color: $gray-900;
+                        margin: 0;
+                        max-width: 70%;
+                        text-align: center;
+                        font-weight: 700;
+                    }
+
+                    .success {
+                        background-color: lightgreen;
+                        opacity: 0.8;
+                        color: $gray-900;
+                        margin: 0;
+                        max-width: 70%;
+                        text-align: center;
+                        font-weight: 700;
+                    }
+
+                    .security-content {
+                        justify-content: center;
+                        display: grid;
+                        grid-template-columns: 1fr 1fr;
+                        grid-template-areas:
+                            "current empty" "new confirm";
+                        gap: .5rem;
+
+
+                        .security-group {
+                            position: relative;
+                            display: flex;
+                            flex-direction: column;
+                            color: $gray-900;
+                            font-weight: 700;
+
+                            span {
+
+                                &.field-validation-error {
+                                    color: $danger;
+                                    font-weight: 500;
+                                    opacity: 0.7;
+                                    position: absolute;
+                                    top: 0;
+                                    right: 0;
+                                }
+                            }
+
+                            input {
+                                border: 1px solid $gray-400;
+                                padding: .4rem;
+                                border-radius: 5px;
+
+                                &.input-validation-error {
+                                    border-color: $danger;
+                                }
+                            }
+                        }
+
+                        #current-password {
+                            grid-area: current;
+                        }
+
+                        #new-password {
+                            grid-area: new;
+                        }
+
+                        #confirm-password {
+                            grid-area: confirm;
+                        }
+                    }
+
+                    .security-buttons {
+                        display: flex;
+                        gap: 1rem;
+                        padding-top: 2rem;
+                        padding-bottom: 2rem;
+                        border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+                        .btn-gray {
+                        }
+                    }
+                }
+
+
+                .account-delete {
+                    padding-top: 2rem;
+
+
+                    .delete {
+
+                        .alert {
+                            background-color: #ef444452;
+                            opacity: 0.8;
+                            color: $gray-900;
+                            margin: 0;
+                            max-width: 70%;
+                            text-align: center;
+                            font-weight: 700;
+                        }
+
+                        .success {
+                            background-color: lightgreen;
+                            opacity: 0.8;
+                            color: $gray-900;
+                            margin: 0;
+                            max-width: 70%;
+                            text-align: center;
+                            font-weight: 700;
+                        }
+
+                        h4 {
+                            color: #6366F1
+                        }
+
+                        p {
+                            color: $gray-500;
+                        }
+
+                        .deletebox-group {
+                           
+
+                            .checkbox-error {
+                                color: $danger;
+                                font-weight: 500;
+                                opacity: 0.7;
+                            }
+                        }
+
+
+
+                        .delete-button {
+                            display: flex;
+                            padding-top: 2rem;
+
+                            .btn-theme {
+                                background-color: $danger;
+
+
+                                &:hover {
+                                    color: black;
+                                    font-weight: 700;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
