--- a/WebApp/wwwroot/css/scss/sections/_contact.scss
+++ b/WebApp/wwwroot/css/scss/sections/_contact.scss
@@ -253,3 +253,272 @@
         }
     }
 }
+
+.dark-mode {
+    #contact {
+        padding-top: 2rem;
+        background-color: $gray-900;
+
+        .container {
+            display: flex;
+            position: relative;
+
+            @inclde xl {
+                justify-content: space-between;
+            }
+
+
+            .left-side {
+                display: flex;
+                flex-direction: column;
+
+
+                @include xl {
+                    max-width: 30%;
+                }
+
+
+                .nav-links {
+                    color: $gray-500;
+
+                    a {
+                        color: #9397ad;
+                        text-decoration: none;
+                    }
+
+                    .home {
+
+                        i {
+                            margin-right: .2rem;
+                        }
+                    }
+
+                    span {
+                    }
+
+                    .contact {
+                        color: $theme;
+                    }
+                }
+
+                .contact-content {
+                    padding-bottom: 4rem;
+
+                    h1 {
+                        padding-top: 1rem;
+                        color: $gray-300;
+                    }
+
+                    .contact-group {
+                        display: flex;
+                        padding-top: 2rem;
+
+
+
+                        .contact-icon {
+                            padding-right: 1.5rem;
+
+
+                            i {
+                                font-size: 1.2rem;
+                                background-color: black;
+                                border: 1px solid black;
+                                padding: 1rem;
+                                border-radius: 50%;
+                                color: $theme;
+                            }
+                        }
+
+                        .contact-email {
+
+                            h2 {
+                                color: $gray-300;
+                            }
+
+                            p {
+                                color: $gray-500;
+                            }
+
+
+
+
+
+                            .btn-gray {
+                                display: flex;
+                                background-color: $gray-900;
+                                color: $theme;
+                                padding-left: 0;
+                                font-weight: 700;
+
+
+
+                                &:hover {
+                                    color: $theme-secondary;
+                                }
+                            }
+                        }
+
+                        .contact-career {
+
+                            h2 {
+                                color: $gray-300;
+                            }
+
+                            p {
+                                color: $gray-500;
+                            }
+
+
+
+                            .btn-gray {
+                                display: flex;
+                                background-color: $gray-900;
+                                color: $theme;
+                                padding-left: 0;
+                                font-weight: 700;
+
+
+                                &:hover {
+                                    color: $theme-secondary;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .right-side {
+                display: none;
+
+                @include xl {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                }
+
+                .form-box {
+                    background-color: black;
+                    padding: 4rem 3rem 4rem 3rem;
+                    position: absolute;
+                    right: 0;
+                    top: 3rem;
+
+
+
+                    &.show {
+                        display: block;
+                    }
+
+                    &.hide {
+                        display: none !important;
+                    }
+
+
+
+                    .contact-form {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1rem;
+
+
+
+
+
+                        h3 {
+                            color: $gray-300;
+                        }
+
+                        .form-group {
+                            position: relative;
+                            display: flex;
+                            flex-direction: column;
+                            color: $gray-500;
+
+                            .opt {
+                                display: flex;
+                                gap: .2rem;
+
+                                p {
+                                    margin: 0;
+                                    
+                                }
+                            }
+
+                            label {
+                                font-weight: 700;
+                                color: $gray-500;
+                            }
+
+                            textarea {
+                                padding-bottom: 5rem;
+                                border: 1px solid $gray-400;
+                                padding: .4rem;
+                                border-radius: 5px;
+
+                                &.field-validation-error {
+                                    color: $danger;
+                                    font-weight: 500;
+                                    opacity: 0.7;
+                                    position: absolute;
+                                    top: 0;
+                                    right: 0;
+                                }
+
+
+                                &.input-validation-error {
+                                    border-color: $danger;
+                                }
+                            }
+
+                            select {
+                                padding: .2rem;
+                                border: 1px solid $gray-400;
+                                padding: .4rem;
+                                border-radius: 5px;
+                            }
+
+                            input {
+                                border: 1px solid $gray-400;
+                                padding: .4rem;
+                                border-radius: 5px;
+
+                                &.input-validation-error {
+                                    border-color: $danger;
+                                }
+                            }
+
+                            span {
+
+                                &.field-validation-error {
+                                    color: $danger;
+                                    font-weight: 500;
+                                    opacity: 0.7;
+                                    position: absolute;
+                                    top: 0;
+                                    right: 0;
+                                }
+                            }
+                        }
+
+                        .form-button {
+
+                            #showFormBtn {
+                            }
+
+                            .btn-theme {
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .map {
+
+            iframe {
+                width: 100%;
+                height: 70vh;
+            }
+        }
+    }
+}
