--- a/WebApp/wwwroot/css/scss/sections/_signup.scss
+++ b/WebApp/wwwroot/css/scss/sections/_signup.scss
@@ -113,3 +113,131 @@
         }
     }
 }
+
+.dark-mode {
+    #signup {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        background-color: $gray-900;
+
+        .container {
+            display: flex;
+            justify-content: center;
+
+
+            .signup-form {
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+
+
+                .alert {
+                    background-color: #ef4444c2;
+                    text-align: center;
+                    font-weight: 700;
+                    color: $gray-900;
+                }
+
+
+
+                h1 {
+
+
+                    @include h3;
+                    color: $gray-300;
+
+                    @include lg {
+                        @include h1;
+                        color: $gray-300;
+                    }
+                }
+
+                p {
+                    color: $gray-500;
+                }
+
+
+                .content {
+                    justify-content: center;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-areas:
+                        "first last" "email email" "password password" "confirmpassword confirmpassword" "terms terms";
+                    gap: .5rem;
+
+
+
+                    .input-group {
+                        display: flex;
+                        flex-direction: column;
+                        color: $gray-500;
+                        font-weight: 700;
+
+                        span {
+
+
+                            &.field-validation-error {
+                                color: $danger;
+                                font-weight: 500;
+                                opacity: 0.7;
+                                position: absolute;
+                                top: 0;
+                                right: 0;
+                            }
+                        }
+
+                        input {
+                            border: 1px solid $gray-400;
+                            padding: .4rem;
+                            border-radius: 5px;
+
+                            &.input-validation-error {
+                                border-color: $danger;
+                            }
+                        }
+                    }
+
+
+                    #form-firstname {
+                        grid-area: first;
+                    }
+
+
+                    #form-lastname {
+                        grid-area: last;
+                    }
+
+                    #form-email {
+                        grid-area: email;
+                        width: 100%;
+                    }
+
+                    #form-password {
+                        grid-area: password;
+                    }
+
+                    #form-confirmpassword {
+                        grid-area: confirmpassword;
+                    }
+
+                    #form-terms {
+                        grid-area: terms;
+                        margin-top: .5rem;
+                        margin-bottom: 1rem;
+                        color: $gray-500;
+
+                        .checkbox-error {
+                            color: $danger;
+                            font-weight: 500;
+                            opacity: 0.7;
+                        }
+                    }
+                }
+
+                .btn-theme {
+                    margin-bottom: .5rem;
+                }
+            }
+        }
+    }
+}
